# dclab-webscrapping

./: .gitignore  README.md  main.py  pyproject.toml
webscrapping/process/: vd.py
webscrapping/scrap/: instagram.py
